Added communication methods
