# src/main/java/ru/hh/aiinterviewer/api/dto/CreateSessionRequestDto.java
@@ -14,6 +14,7 @@ public class CreateSessionRequestDto {
   @Min(1)
   private Integer numQuestions;
   private String instructions;
+  private String communicationStyle;
 }
 
 
